# makgora

./: .gitmessage.txt  pyproject.toml
src/app/: main.py
src/contexts/auth/domain/: domain_event.py  entity.py  exceptions.py  value_object.py
src/shared/modeling/: entity.py  exceptions.py  tx.py  value_object.py
src/shared/primitives/: io.py  maybe.py  result.py
tests/unit/contexts/auth/domain/: test_auth_value_object.py
tests/unit/shared/modeling/: test_entity.py  test_tx.py  test_value_object.py
tests/unit/shared/primitives/: test_io.py  test_maybe.py  test_result.py
