[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makgora"
version = "0.1.0"
description = "Mak'gora API (DDD×FP with FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/app",
  "src/contexts",
  "src/shared",
]
